# xerune

./: Cargo.toml  LICENSE  README.md  gemini.md
examples/: animation.rs  animation_css.rs  breakout.rs  calculator.rs  music_player.rs  showcase.rs  tiny_skia_bench.rs  todo.rs
examples/support/: drm_backend.rs  linux_backend.rs  mod.rs  winit_backend.rs
fast_renderer/: Cargo.toml
fast_renderer/src/: blitter.rs  gradient.rs  lib.rs  rounded_rect.rs
qemu-arm/: qemu-boot.sh  qemu-prep.sh
resources/: music.json
resources/music_player/: music.json
skia_renderer/: Cargo.toml
skia_renderer/src/: lib.rs
src/: css.rs  defaults.rs  graphics.rs  lib.rs  main.rs  model.rs  runtime.rs  style.rs  ui.rs
src/css/: animation.rs  mod.rs  parser.rs
src/runtime/: animation.rs  mod.rs  timer.rs
src/ui/: attributes.rs  builder.rs  metadata.rs  mod.rs  node_map.rs  style_resolution.rs
templates/: animation.html  animation_css.html  breakout.html  calculator.html  music_list.html  music_player.html  music_player_view.html  showcase.html  test_template.html  todo_list.html
tests/: layout_tests.rs
wpt_runner/: Cargo.toml
wpt_runner/src/: main.rs
xerune_derive/: Cargo.toml
xerune_derive/src/: lib.rs
