[workspace]
members = ["skia_renderer"]

[package]
name = "xerune"
version = "0.1.0"
edition = "2024"

[lib]
name = "xerune"
path = "src/lib.rs"

[dependencies]
askama = "0.14.0"
coarse-prof = "0.2.6"
html5ever = "0.36.1"
markup5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
taffy = "0.9.2"
csscolorparser = "0.6.2"

[dev-dependencies]
winit = "0.29.15"
softbuffer = "0.4.1"
tiny-skia = "0.12.0"
fontdue = "0.9.3"
skia_renderer = { path = "skia_renderer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
