[workspace]
members = ["skia_renderer"]

[package]
name = "xerune"
version = "0.1.0"
edition = "2024"

[lib]
name = "xerune"
path = "src/lib.rs"


[features]
profile = ["dep:coarse-prof"]

[dependencies]
askama = "0.14.0"
coarse-prof = { version = "0.2.6", optional = true }
html5ever = "0.36.1"
markup5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
taffy = "0.9.2"
csscolorparser = "0.6.2"
log = "0.4"
env_logger = "0.11"

# Embedded Linux dependencies
linuxfb = { version = "0.2", optional = true }
evdev = { version = "0.12", optional = true }
simplecss = "0.2.2"

[dev-dependencies]
coarse-prof = "0.2.6"
winit = "0.29.15"
softbuffer = "0.4.1"
tiny-skia = "0.12.0"
fontdue = "0.9.3"
skia_renderer = { path = "skia_renderer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For the embedded backend in examples
linuxfb = "0.2"
evdev = "0.12"
# anyhow for easier error handling in examples
anyhow = "1.0" 
rand = "0.8"

[profile.release]
# Turn on only when you really need smaller binary size, it has a significant performance impact
# opt-level = "z"
# Turn on for final binary, it slows down build time
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = true
