[workspace]
members = ["skia_renderer", "wpt_runner", "fast_renderer", "xerune_derive"]

[package]
name = "xerune"
version = "0.1.0"
edition = "2024"

[lib]
name = "xerune"
path = "src/lib.rs"


[features]
profile = ["dep:coarse-prof"]
fast-renderer = []
dynamic-parser = ["dep:html5ever", "dep:markup5ever", "dep:markup5ever_rcdom"]

[dependencies]
xerune_derive = { path = "xerune_derive" }
coarse-prof = { version = "0.2.6", optional = true }
html5ever = { version = "0.36.1", optional = true }
markup5ever = { version = "0.36.1", optional = true }
markup5ever_rcdom = { version = "0.36.0", optional = true }
taffy = "0.9.2"
csscolorparser = "0.6.2"
regex = "1.10"
log = "0.4"
env_logger = "0.11"

# Embedded Linux dependencies
linuxfb = { version = "0.2", optional = true }
evdev = { version = "0.12", optional = true }
simplecss = "0.2.2"

mimalloc = "0.1.43"

[dev-dependencies]
coarse-prof = "0.2.6"
winit = "0.29.15"
softbuffer = "0.4.1"
tiny-skia = "0.12.0"
fontdue = "0.9.3"
skia_renderer = { path = "skia_renderer", features = ["profile"] }
fast_renderer = { path = "fast_renderer", features = ["profile"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For the embedded backend in examples
linuxfb = "0.2"
evdev = "0.12"
# anyhow for easier error handling in examples
anyhow = "1.0" 
rand = "0.8"
mimalloc = "0.1.43"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
