[package]
name = "wpt_runner"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
xerune = { path = "..", features = ["dynamic-parser"] }
skia_renderer = { path = "../skia_renderer" }
tiny-skia = "0.12.0"
fontdue = "0.9.3"
glob = "0.3.1"
regex = "1.10"
rayon = "1.8"
owo-colors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
markup5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
html5ever = "0.36.1"
taffy = "0.9.2"
