[package]
name = "xerune_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
askama_parser = "0.14.0"
html5ever = "0.36.1"
markup5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
simplecss = "0.2.2"
